Add additional patterns to .gitignore for conflict copies and synctex files

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ homework/homework4 (Paul Goldsmith-Pinkham's conflicted copy 2025-02-14 6).pdf
 grading/*
 .gitignore
 homework/data/116250-V1*
+lectures/14b_extensions_checklist.synctex (Paul Goldsmith-Pinkham's conflicted copy 2025-03-06 1).gz
+*synctex*
+*(Paul Goldsmith-Pinkham's conflicted copy *
